# code-search-template

./: .env.example  README.md  pyproject.toml  pyrightconfig.json  requirements.md  spec.md  tasks.md
datasets/: cases.yaml
docs/: user-manual.md
scripts/: setup_project_environment.sh  setup_ripgrep_fd.sh
src/: __init__.py
src/codeagent_lab/: __init__.py  container.py  core.py  logger.py  models.py  settings.py
src/codeagent_lab/ast/: __init__.py  protocols.py  ts_provider.py
src/codeagent_lab/ast/queries/: go.scm  python.scm  typescript.scm
src/codeagent_lab/cli/: __init__.py  ast.py  experiments.py  llm.py  tools.py  ui.py  vectordb.py
src/codeagent_lab/embeddings/: openai_embed.py  protocols.py
src/codeagent_lab/experiments/: optimizer.py  store.py
src/codeagent_lab/llm/: factory.py  prompts.py  tools_adapter.py
src/codeagent_lab/prompts/: find_related.yaml
src/codeagent_lab/tools/: __init__.py  _path_filters.py  ast_treesitter_multi.py  factory.py  find_fd.py  grep_ripgrep.py  keyword_bm25.py  protocols.py  semantic_openai.py
src/codeagent_lab/ui/: app.py
src/codeagent_lab/vectordb/: factory.py  faiss_store.py  protocols.py
src/faiss/: __init__.pyi
src/pyarrow/: __init__.pyi  parquet.pyi
src/tree_sitter/: __init__.pyi
tests/e2e/: __init__.py  test_keyword_cli_end_to_end.py
tests/unit/: test_container.py  test_logger.py  test_settings.py
tests/unit/cli/: test_experiments_cli.py  test_tools_cli.py  test_vectordb_cli.py
tests/unit/codeagent_lab/tools/: __init__.py  test_grep_ripgrep.py
tests/unit/embeddings/: __init__.py  test_openai_embed.py
tests/unit/experiments/: __init__.py  test_optimizer.py  test_store.py
tests/unit/llm/: __init__.py  test_factory.py  test_prompts.py  test_tools_adapter.py
tests/unit/tools/: test_ast_treesitter_multi.py  test_find_fd.py  test_grep_ripgrep.py  test_keyword_bm25.py  test_semantic_openai.py
tests/unit/ui/: __init__.py  test_app.py
tests/unit/vectordb/: __init__.py  test_factory.py  test_faiss_store.py
