[project]
name = "codeagent-lab"
version = "0.1.0"
description = "Template library for code-search tools & experiments (Tools usable as Actions/LLM tools)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "faiss-cpu>=1.8",
    "graphviz>=0.20.3",
    "jinja2>=3.1",
    "openai>=1.40",
    "optuna>=3.6",
    "orjson>=3.9",
    "pandas>=2.2",
    "pyarrow>=17",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "rank-bm25>=0.2.2",
    "streamlit>=1.37",
    "structlog>=24.1",
    "typer>=0.12",
]

[project.optional-dependencies]
ast = [
    "tree-sitter>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-python>=0.21",
]
dev = [
    "pyright>=1.1",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
lab = "codeagent_lab.cli.tools:app"
lab-ui = "codeagent_lab.cli.ui:app"
lab-exp = "codeagent_lab.cli.experiments:app"
lab-vdb = "codeagent_lab.cli.vectordb:app"

[tool.uv]
# Install dev dependencies with 'uv sync --extra dev' or 'uv pip install -e .[dev]'

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100", "D203", "D213", "D300",
    "I001",
    "ANN401",
    "FBT001", "FBT002",
    "PLR0913",
    "S110",
    "BLE001",
    "PLC0415",
    "TRY400",
    "EXE001",
    "EXE002",
    "N802",
]
fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "TRY003", "EM101"]
"tests/helpers/pexpect_debug.py" = ["T201", "TRY300"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = ["src", "noxfile.py", "tests"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    "venv",
    ".nox",
    "build",
    "dist",
]
stubPath = "typings"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v -ra --strict-markers"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks integration tests",
  "asyncio: marks tests as asyncio"
]

[dependency-groups]
dev = [
    "nox>=2025.10.16",
    "pyright>=1.1",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]
